fix sidebar overlap on medium screens

--- a/bosch-target-chart/app/assets/stylesheets/charts.scss
+++ b/bosch-target-chart/app/assets/stylesheets/charts.scss
@@ -32,7 +32,7 @@
 }
 
 #yearSelectContainer {
-  @media(min-width:767px) {
+  @media(min-width:768px) {
     padding-right: 0;
   }
 
@@ -47,7 +47,7 @@
 }
 
 #manageCategoriesContainer {
-  @media(min-width:767px) {
+  @media(min-width:768px) {
     padding-right: 0;
   }
 
@@ -63,11 +63,21 @@
   }
 }
 
+#openTargetsSidebarButton {
+  @media(min-width:768px) {
+    display: inline-block;
+  }
+  @media(max-width:767px) {
+    display: none;
+  }
+}
+
 #targetsSidebar {
   z-index: 100;
   max-width: 15rem;
   min-width: 15rem;
   height: 100%;
+  display: none;
 
   #targetsSidebarPanel {
     right: 100%;
